05_kubernetes_entry/try/pod/simple-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  template: #template以下はPodリソースにおける定義と同じ    
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: nginx
        image: gihyodocker/nginx-proxy:latest
      - name: echo
        image: gihyodocker/echo:patched
        ports:
        - containerPort: 8080
