05_kubernetes_entry/try/pod/simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-echo
spec:
  containers:
  - name: nginx
    image: gihyodocker/nginx-proxy:latest
  - name: echo
    image: gihyodocker/echo:latest
    ports:
    - containerPort: 8080
